# ib_tools

./: .gitignore  .readthedocs.yaml  README.md  README.rst  conf.py  index.rst  parms.json  pyproject.toml  runFlexRpt.py
.github/: FUNDING.yml
code/: AsyncStreamingTicks.py  algo_template.py  blackscholes.py  contract_crypto_detail.py  contract_detail.py  contract_stockdetail.py  dlFlexToMultiXL.py  futures_option_contract.py  get_tick_type.py  hist_data_index_multi.py  historicalTick_data.py  historical_data.py  news.py  portfolio.py  position_find_match.py  positions_list_all.py  positions_toCSV.py  stockPrice.py  streamingTick_data.py
docs/: LICENSE.txt  PortfolioItem.md  Ticker.md  requirements.txt
docs/source/: conf.py  index.rst  usage.rst
ib_tools/: historical_data futures.py  historical_data multi.py
ibtools/: contract.py  dividend.py  file.py  fundamentals.py  hist_data.py  holdings.py  news.py
input/: readme.md
output/: readme.md
parms/: readme.md
